# robotframework-jira-xray-confluence

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: basic_suite.robot
src/robotframework_jira_xray_confluence/: JiraXrayConfluence.py  __init__.py
